fixed the issue with card getting too big

--- a/css/theme.css
+++ b/css/theme.css
@@ -135,7 +135,7 @@ MenuCardItemTitle{
 }
 
 MenuCardImage{
-        margin-top:20mm;
+        margin-top:0mm;
 }
 MenuCardItemDescription{
         color: #cccccc;
